# owasp-sql-injections

./: .bandit  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build.yaml
scripts/: main.py
scripts/payloads/: auth_bypass_injections.txt
src/owasp_sql_injections/: base.py  config.py
